--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - uses: ./.github/actions/setup-goversion.yml
+    - uses: ./.github/actions/setup-goversion
 
     - name: Build
       run: go build -v ./...
