--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,7 +51,7 @@ jobs:
 
       # Login to Docker Hub
       - name: Get Secrets
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         uses: grafana/shared-workflows/actions/get-vault-secrets@main
         with:
           # Secrets placed in the ci/common/<path> path in Vault
@@ -60,7 +60,7 @@ jobs:
             DOCKERHUB_TOKEN=dockerhub:password
 
       - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
@@ -77,7 +77,7 @@ jobs:
 
       - name: Export digest
         id: digest
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
@@ -85,7 +85,7 @@ jobs:
           echo "artifact_name=digests-${{ matrix.platform }}" | sed -e 's/\//-/g' >> "$GITHUB_OUTPUT"
 
       - name: Upload digest
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.digest.outputs.artifact_name }}
