--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-lint-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: golangci-lint
+    - name: Lint
       uses: golangci/golangci-lint-action@v4
       with:
         version: v1.55
