Simplify the awk split command into just one split command

--- a/.github/actions/setup-goversion/action.yml
+++ b/.github/actions/setup-goversion/action.yml
@@ -6,9 +6,7 @@ runs:
   steps:
     - id: goversion
       run: |
-        # We need to extract the go version from the Dockerfile
-        # First pass splits on the FROM line and the second pass splits on the version
-        cat Dockerfile | awk 'BEGIN{IGNORECASE=1} /^FROM golang:.* AS build$/ {v=$2;split(v,a,":"); split(a[2],b,"-")}; END {printf("version=%s", b[1])}' >> $GITHUB_OUTPUT
+        cat Dockerfile | awk 'BEGIN{IGNORECASE=1} /^FROM golang:.* AS build$/ {v=$2;split(v,a,":|-")}; END {printf("version=%s", a[2])}' >> $GITHUB_OUTPUT
       shell: bash
     - uses: actions/setup-go@v5
       with:
