--- a/.github/actions/setup-goversion/action.yml
+++ b/.github/actions/setup-goversion/action.yml
@@ -1,11 +1,12 @@
 # This action extracts the go version from Dockerfile and uses this version setup go
 name: setup-goversion
+description: Extracts the go version from Dockerfile and uses this version setup go
 runs:
   using: composite
   steps:
     - id: goversion
       run: |
-        cat Dockerfile | awk '/^FROM golang:.* as build$/ {v=$2;split(v,a,":")}; END {printf("version=%s", a[2])}' >> $GITHUB_OUTPUT
+        cat Dockerfile | awk 'BEGIN{IGNORECASE=1} /^FROM golang:.* AS build$/ {v=$2;split(v,a,":|-")}; END {printf("version=%s", a[2])}' >> $GITHUB_OUTPUT
       shell: bash
     - uses: actions/setup-go@v5
       with:
