--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,3 +25,7 @@ checksum:
   name_template: 'checksums.txt'
 changelog:
   sort: asc
+  filters:
+    exclude:
+      - '^docs'
+      - '^chore(deps):'
