Update type to be a service

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,6 +11,6 @@ metadata:
   description: |
     Prometheus Exporter for Cloud Provider agnostic cost metrics
 spec:
-  type: tool
+  type: service
   owner: group:default/platform-monitoring
   lifecycle: production
