--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,8 +6,10 @@ metadata:
   annotations:
     github.com/project-slug: grafana/cloudcost-exporter
   links:
-    - title: Slack Channel
+    - title: Community Slack Channel
       url: https://grafana.slack.com/archives/C064EMEB4E6
+    - title: Internal Slack Channel
+      url: https://raintank-corp.slack.com/archives/C067MGQ98AW
   description: |
     Prometheus Exporter for Cloud Provider agnostic cost metrics
 spec:
