Specify version 2 of goreleaser to remove warning

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,7 @@
 # Make sure to check the documentation at https://goreleaser.com
 
+version: 2
+
 project_name: cloudcost-explorer
 builds:
   - id: cloudcost-explorer
