Format Service manifest

--- a/deploy/helm/cloudcost-exporter/templates/service.yaml
+++ b/deploy/helm/cloudcost-exporter/templates/service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
-      protocol: TCP
+      protocol: {{ .Values.service.protocol }}
       name: http
   selector:
     {{- include "cloudcost-exporter.selectorLabels" . | nindent 4 }}
