--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,12 @@ jobs:
           version: v1.56
       - name: Test
         run: go test -v ./...
+      - name: Install make
+        run: sudo apt-get update && sudo apt-get install -y make
+        shell: bash
       - name: Check for Dashboards Drift
         run: |
-          go run ./cloudcost-exporter-dashboards/main.go --mode=files > /dev/null
+          make build-dashboards > /dev/null
           if ! git diff --exit-code; then
             echo "Dashboards are out of sync. Please run 'make build-dashboards' and commit the changes."
             exit 1
