--- a/deploy/helm/cloudcost-exporter/templates/deployment.yaml
+++ b/deploy/helm/cloudcost-exporter/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "cloudcost-exporter.serviceAccountName" . }}
       containers:
+        - args: {{ .Values.containerArgs }}
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
