--- a/deploy/helm/cloudcost-exporter/templates/deployment.yaml
+++ b/deploy/helm/cloudcost-exporter/templates/deployment.yaml
@@ -26,10 +26,10 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "cloudcost-exporter.serviceAccountName" . }}
       containers:
-        - args: {{ .Values.containerArgs }}
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args: {{ .Values.containerArgs }}
           ports:
             - name: {{ .Values.service.portName }}
               containerPort: {{ .Values.service.port }}
@@ -44,12 +44,14 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          securityContext:
-            {{- toYaml .Values.podSecurityContext | nindent 12 }}
           volumeMounts:
             {{- toYaml .Values.volumeMounts | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
