--- a/deploy/helm/cloudcost-exporter/values.yaml
+++ b/deploy/helm/cloudcost-exporter/values.yaml
@@ -25,8 +25,8 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext:
-  fsGroup: "10001"
+securityContext:
+  fsGroup: 10001
 
 service:
   type: ClusterIP
