--- a/deploy/helm/cloudcost-exporter/templates/deployment.yaml
+++ b/deploy/helm/cloudcost-exporter/templates/deployment.yaml
@@ -29,7 +29,10 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          args: {{ .Values.containerArgs }}
+          args:
+          {{- range .Values.containerArgs }}
+            - {{ . }}
+          {{- end }}
           ports:
             - name: {{ .Values.service.portName }}
               containerPort: {{ .Values.service.port }}
