Add Helm release GitHub Action

--- a/deploy/helm/cloudcost-exporter/Chart.yaml
+++ b/deploy/helm/cloudcost-exporter/Chart.yaml
@@ -11,4 +11,4 @@ version: 0.7.7
 # with each release.
 appVersion: "0.7.7"
 
-home: https://github.com/grafana/cloudcost-exporter
+home: https://github.com/grafana/cloudcost-exporter/tree/v0.7.7
