--- a/.github/workflows/release-helm.yml
+++ b/.github/workflows/release-helm.yml
@@ -2,7 +2,11 @@
 name: Release Helm Chart
 
 on:
-  workflow_dispatch:
+    push:
+      branches:
+        - main
+      paths:
+        - 'deploy/helm/Chart.yaml'
 
 env:
   CR_BIN_PATH: "${{ github.workspace }}/bin"
@@ -14,22 +18,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout grafana/cloud-cost-exporter
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           path: source
 
       - name: Checkout grafana/helm-charts
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           path: helm-charts
           token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
 
       - name: Setup Helm
-        uses: helm/setup-helm@v4
+        uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4.3.0
         with:
-          version: v3.10.3
+          version: v4.3.0
 
       - name: Install CR tool
         env:
