--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,7 @@ linters:
     - errorlint
     - unused
     - bodyclose
+    # TODO: Enable revive after fixing all the issues
     # - revive
     - govet
     - ineffassign
@@ -20,26 +21,26 @@ linters:
     - unused
   # settings:
   #   revive:
-        # confidence: 0.8
-        # severity: warning
-        # rules:
-        #     - name: blank-imports
-        #     - name: context-as-argument
-        #     - name: context-keys-type
-        #     - name: error-return
-        #     - name: error-strings
-            # - name: error-naming
-            # - name: exported
-            # - name: if-return
-            # - name: increment-decrement
-            # - name: var-naming
-            # - name: var-declaration
-            # - name: range
-            # - name: receiver-naming
-            # - name: time-naming
-            # - name: unexported-return
-            # - name: indent-error-flow
-            # - name: errorf
+  #       confidence: 0.8
+  #       severity: warning
+  #       rules:
+  #           - name: blank-imports
+  #           - name: context-as-argument
+  #           - name: context-keys-type
+  #           - name: error-return
+  #           - name: error-strings
+  #           - name: error-naming
+  #           - name: exported
+  #           - name: if-return
+  #           - name: increment-decrement
+  #           - name: var-naming
+  #           - name: var-declaration
+  #           - name: range
+  #           - name: receiver-naming
+  #           - name: time-naming
+  #           - name: unexported-return
+  #           - name: indent-error-flow
+  #           - name: errorf
 
 formatters:
   enable:
