Enforce linting and fix existing linter issues (#557)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,12 +1,48 @@
+version: "2"
+
 output:
-  formats: 
-    - format: colored-line-number
+  formats:
+    tab:
+      print-linter-name: true
 
 linters:
-  disable-all: true
+  default: none
   enable:
-    - goimports
-    - gofmt
     - misspell
     - errorlint
     - unused
+    - bodyclose
+    # TODO: Enable revive after fixing all the issues
+    # - revive
+    - govet
+    - ineffassign
+    - misspell
+    - staticcheck
+    - unused
+  # settings:
+  #   revive:
+  #       confidence: 0.8
+  #       severity: warning
+  #       rules:
+  #           - name: blank-imports
+  #           - name: context-as-argument
+  #           - name: context-keys-type
+  #           - name: error-return
+  #           - name: error-strings
+  #           - name: error-naming
+  #           - name: exported
+  #           - name: if-return
+  #           - name: increment-decrement
+  #           - name: var-naming
+  #           - name: var-declaration
+  #           - name: range
+  #           - name: receiver-naming
+  #           - name: time-naming
+  #           - name: unexported-return
+  #           - name: indent-error-flow
+  #           - name: errorf
+
+formatters:
+  enable:
+    - goimports
+    - gofmt
