--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,4 +35,4 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ${{ env.TAGS_CONFIG }}
+          tags: v${{ env.TAGS_CONFIG }}
