--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ env:
   TAGS_CONFIG: |
     type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
     type=sha,prefix={{ branch }}-,format=short,enable=${{ github.ref == 'refs/heads/main' }}
-    type=semver,pattern={{ version }}
+    type=semver,pattern=v{{ version }}
 
 jobs:
   build:
@@ -35,4 +35,4 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: v${{ env.TAGS_CONFIG }}
+          tags: ${{ env.TAGS_CONFIG }}
