--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>grafana/grafana-renovate-config//presets/base"]
+  "extends": ["github>grafana/grafana-renovate-config//presets/base"],
+  "ignoreUnstable": true
 }
