--- a/.github/workflows/build-and-deploy-multi-arch.yml
+++ b/.github/workflows/build-and-deploy-multi-arch.yml
@@ -49,9 +49,9 @@ jobs:
         with:
           registries: dockerhub
           platforms: ${{ matrix.platform }}
-          outputs: "type=image,push-by-digest=true,name-canonical=true,push=false"
-          push: false
-          tags: ${{ env.TAGS_CONFIG }}
+          outputs: "type=image,push-by-digest=true,name-canonical=true,push=true"
+          push: true
+          tags: multi-arch-test
           include-tags-in-push: false
 
       - name: Export Docker Digest
@@ -72,5 +72,5 @@ jobs:
         uses: grafana/shared-workflows/actions/docker-import-digests-push-manifest@cd422befbbda65e0612a63627e8c8820d86bc2a6 # docker-import-digests-push-manifest/v0.1.0
         with:
           images: ${{ needs.build-and-export-digest.outputs.images }}
-          push: false
-          tags: ${{ env.TAGS_CONFIG }}
+          push: true
+          tags: multi-arch-test
