--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -78,7 +78,7 @@ jobs:
   deploy:
     name: Trigger Argo Workflow Deployment
     runs-on: ubuntu-24.04
-    needs: build
+    needs: build-and-export-digest
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
