Test2: release on pr merge

--- a/.github/workflows/build-on-feature-branch.yml
+++ b/.github/workflows/build-on-feature-branch.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   build-and-export-digest:
+    if: false  # Disabled for testing - remove this line to re-enable
     permissions:
       contents: read
       id-token: write
