--- a/.github/workflows/release-on-tag-push.yml
+++ b/.github/workflows/release-on-tag-push.yml
@@ -6,11 +6,13 @@ on:
       - v*
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   tag-and-goreleaser:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -18,6 +20,7 @@ jobs:
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Extract version
         id: version
