Move cloudcost-exporter Helm chart to source repository
Migrate cloudcost-exporter Helm chart from grafana/helm-charts to source
repository to fully automate releases.

- Move chart to charts/cloudcost-exporter/
- Update Chart's version to 1.0.7 and appVersion to 0.11.0
- Add release-helm-chart.yaml workflow using Grafana Labs reusable workflow
- Update README.md and releases.md documentation
- Fix .gitignore to allow charts directory

Chart continues publishing to grafana/helm-charts (same user-facing URL).

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ go.work
 .idea
 .vscode
 
-cloudcost-exporter
+# Ignore the compiled binary at root, but not charts/cloudcost-exporter
+/cloudcost-exporter
 
 dist/
